--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,11 +8,17 @@
   padding: 5px;
 }
 
-input {
+input[type='text'] {
   min-width: 500px;
   height: 20px;
   border-radius: 10px;
   padding: 10px;
   font-size: 16px;
   margin: 10px 0;
+}
+
+input[type='checkbox'] {
+  width: 20px;
+  height: 20px;
+  margin: 0 20px;
 }
